add list of faculty

--- a/contuct.html
+++ b/contuct.html
@@ -4,10 +4,7 @@
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width"> 
         <title>AIU contacts</title> 
-        <style> 
-            ul{ 
-                font-size: 1.2em; 
-            } 
+    
         </style> 
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -15,22 +12,29 @@
         <link rel="stylesheet" href="css/style.css"> 
     </head> 
     <body> 
-        <h2 id="home"></h2> 
-        <a href="http://127.0.0.1:5501/index.html">-Home</a> 
-        <h2 id="facullties"></h2> 
-        <a href="http://127.0.0.1:5501/faculties.html">-Facullties</a> 
-        <h2 id="pictures"></h2> 
-        <a href="http://127.0.0.1:5501/pictures.html">-Pictures</a> 
+        <ul> 
+            <li> 
+                <a href="./faculty.html">Faculties</a> 
+            </li> 
+            <li> 
+                <a href="./index.html">Home</a> 
+            </li> 
+            <li> 
+                <a href="./contuct.html">Contacts</a> 
+            </li> 
+        </ul> 
         <h1>Ala-Too Internetional University - Gateway to the world</h1> 
-        <img src="img\AIU.jpeg" alt="AIU logo" /> 
+
+        
+        <img src="img/alatoo.png" alt="AIU logo" /> 
         <h2>Contacts</h2> 
         <h2 id="tel"></h2> 
         <a href="tel:+99655510237843"> 
-            Phone 
+            Phone number
         </a> 
         <h2 id="mail"></h2> 
         <a href="alatoo@edu.kg"> 
-            Email 
+            Email -> write us 
         </a> 
         <p>Visit to official <a href="http://alatoo.edu.kg/">Webpage of Alatoo International University</a> to learn more</p> 
     </body> 
