--- a/faculty.html
+++ b/faculty.html
@@ -3,11 +3,8 @@
     <head> 
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width"> 
-        <title>AIU facullties</title> 
-        <style> 
-            ul{ 
-                font-size: 1.2em; 
-            } 
+        <title>AIU faculty</title> 
+
         </style> 
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -16,14 +13,19 @@
          
     </head> 
     <body> 
-        <h2 id="home"></h2> 
-        <a href="http://127.0.0.1:5501/index.html">-Home</a> 
-        <h2 id="pictures"></h2> 
-        <a href="http://127.0.0.1:5501/pictures.html">-Pictures</a> 
-        <h2 id="contacts"></h2> 
-        <a href="http://127.0.0.1:5501/contacts.html">-Contacts</a> 
+        <ul> 
+            <li> 
+                <a href="./faculty.html">Faculties</a> 
+            </li> 
+            <li> 
+                <a href="./index.html">Home</a> 
+            </li> 
+            <li> 
+                <a href="./contuct.html">Contacts</a> 
+            </li> 
+        </ul> 
         <h1>Ala-Too Internetional University - Gateway to the world</h1> 
-        <img src="img\AIU.jpeg" alt="AIU logo" /> 
+        <img src="img/alatoo.png" alt="AIU logo" /> 
         <p>There are 4 faculties:</p> 
         <ul> 
             <li>Faculty of Engineering and Informatics</li> 
