--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width"> 
         <title>Ala-Too Internetional University</title> 
-        <style> 
-            ul{ 
-                font-size: 1.2em; 
-            } 
+
         </style> 
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -15,25 +12,26 @@
         <link rel="stylesheet" href="css/style.css"> 
     </head> 
     <body> 
-        <h2 id="facullties"></h2> 
-        <a href="http://127.0.0.1:5501/faculties.html">-Facullties</a> 
-        <h2 id="pictures"></h2> 
-        <a href="http://127.0.0.1:5501/pictures.html">-Pictures</a> 
-        <h2 id="contacts"></h2> 
-        <a href="http://127.0.0.1:5501/contacts.html">-Contacts</a> 
+        <ul> 
+            <li> 
+                <a href="./faculty.html">Faculties</a> 
+            </li> 
+            <li> 
+                <a href="./picture.html">Pictures</a> 
+            </li> 
+            <li> 
+                <a href="./contuct.html">Home</a> 
+            </li> 
+        </ul> 
         <h1>Ala-Too Internetional University - Gateway to the world</h1> 
-        <img src="img\AIU.jpeg" alt="AIU logo" /> 
+        <img src="img/alatoo.png" alt="AIU logo" /> 
         <p>Ala-Too International University (AIU) was established in 1996 and it is located in Bishkek, the Kyrgyz 
             Republic. Our university consists of five blocks, where there are classrooms and laboratories 
             equipped with the Internet and modern interactive whiteboards. Our "Campus" is an educational 
             center with a library, a conference hall, 3 stadiums, 1 tennis cord, 1 gym, 6 computer classes, 1 
             Internet club, 1 research center, 2 cantinas, 1 medical center. 
-        </p>       
-        <p>The staffing of the AIU is composed of highly qualified, experienced, young, active teachers from 
-            Kyrgyzstan, Turkey, USA, China, India and other countries. Undergraduate, graduate and 
-            postgraduate programs are conducted in a multicultural and democratic atmosphere of mutual 
-            respect. Our university has bilateral agreements with some universities in Europe, China, America, 
-            Turkey and Cyprus.</p> 
+        </p>  
+     
         <p><input type="text" id="name" name="name"> 
         <input type="button" onclick="changeHeader()" value="submit"></p> 
         <p>Visit to official <a href="http://alatoo.edu.kg/">Webpage of Alatoo International University</a> to learn more</p> 
