--- a/picture.html
+++ b/picture.html
@@ -4,28 +4,32 @@
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width"> 
         <title>AIU pictures</title> 
-        <style> 
-            ul{ 
-                font-size: 1.2em; 
-            } 
-        </style> 
+
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="css/style.css"> 
     </head> 
     <body> 
-        <h2 id="home"></h2> 
-        <a href="http://127.0.0.1:5501/index.html">-Home</a> 
-        <h2 id="facullties"></h2> 
-        <a href="http://127.0.0.1:5501/faculties.html">-Facullties</a> 
-        <h2 id="contacts"></h2> 
-        <a href="http://127.0.0.1:5501/contacts.html">-Contacts</a> 
+        <ul> 
+            <li> 
+                <a href="./faculty.html">Faculties</a> 
+            </li> 
+            <li> 
+                <a href="./picture.html">Home</a> 
+            </li> 
+            <li> 
+                <a href="./contuct.html">Contacts</a> 
+            </li> 
+        </ul> 
         <h1>Ala-Too Internetional University - Gateway to the world</h1> 
-        <img src="img\AIU.jpeg" alt="AIU logo" /> 
-        <img src="img\photo.jpg" alt="AIU photo" /> 
-        <img src="img\photo2.jpg" alt="AIU photo" /> 
-        <p>Visit to official <a href="http://alatoo.edu.kg/">Webpage of Alatoo International University</a> to learn more</p> 
+            <img src="img/alatoo.png" alt="AIU logo" /> 
+            <img src="img/18444-700.jpeg" alt="AIU logo" /> 
+            <img src="img/036538c74c86247f09484f00f12fda3c.jpeg" alt="AIU logo" /> 
+            <img src="img/30258560058266093_9315.jpeg" alt="AIU logo" /> 
+
+
+        <p>Visit our website <a href="http://alatoo.edu.kg/">Webpage of Alatoo International University</a> to learn more</p> 
     </body> 
     <script src="js/script.js" ></script> 
 </html>
